syntax = "proto3";

package Common;

message C2S_Enter {
    optional int32 uid      = 1;
    optional string token   = 2;
}

message S2C_Enter {
	optional int32 result   = 1;
}
